fix image contrast

--- a/index.css
+++ b/index.css
@@ -94,7 +94,7 @@ a:hover {
 }
 .image-mask {
     position: absolute;
-    background-color: hsla(209, 15%, 10%, 0.8);
+    background-color: hsla(209, 15%, 10%, 0.5);
     top:0;
     right:0;
     bottom:0;
@@ -173,7 +173,7 @@ main {
 }
 
 h2 {
-    font-size: 30px;
+    font-size: 36px;
     font-weight: 500;
     margin-top:1em;
     grid-column: 1 / span 1;
